-fixed: videos playing even though prop is false by showing the videos but moving them out of the viewport and adding overflow hidden to the body (i am a g)

--- a/src/components/pomodore/Pomodore.css
+++ b/src/components/pomodore/Pomodore.css
@@ -1,6 +1,6 @@
 .PomodoreContainer {
   width: 100%;
-  height: 150px;
+  height: 50px;
   background-color: #0077c2;
   color: #fafafa;
   display: flex;
